ci: install argocd cli

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -62,3 +62,17 @@ jobs:
           extra_plugins: |
             @semantic-release/changelog
             @semantic-release/git
+
+  deploy:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Install ArgoCD CLI
+        uses: clowdhaus/argo-cd-action/@main
+        env:
+          # Only required for first step in job where API is called
+          # All subsequent setps in a job will not re-download the CLI
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          command: version
+          options: --client
+      - run: ls -la
