--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -65,6 +65,8 @@ jobs:
 
   deploy:
     runs-on: ubuntu-latest
+    needs:
+      - build-publish
     steps:
       - name: Install ArgoCD CLI
         uses: clowdhaus/argo-cd-action/@main
