--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -68,7 +68,7 @@ jobs:
     # needs:
     #   - build-publish
     steps:
-      - name: Install ArgoCD CLI
+      - name: ArgoCD - Install CLI
         uses: clowdhaus/argo-cd-action/@main
         env:
           # Only required for first step in job where API is called
@@ -77,5 +77,7 @@ jobs:
         with:
           command: version
           options: --client
-      - run: /opt/hostedtoolcache/argocd/2.0.0/x64/argocd version --client
-      - run: argocd version --client
+      - name: Argocd - Login
+        run: argocd --insecure login ${{ secrets.ARGOCD_SERVER }} --username ${{ secrets.ARGOCD_USERNAME }} --password ${{ secrets.ARGOCD_PASSWORD }}
+      - name: Argocd - Sync Explorer
+        run: argocd app sync staging.explorer | grep -v "http"
