--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -54,7 +54,7 @@ jobs:
 
       - name: Semantic Release
         uses: cycjimmy/semantic-release-action@v2
-        # if: github.ref == 'refs/heads/main'
+        # if: startsWith(github.ref, 'refs/tags/v')
         env:
           GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
           SEMANTIC_RELEASE_PACKAGE: ${{ github.event.repository.name }}
@@ -65,9 +65,29 @@ jobs:
 
   deploy:
     runs-on: ubuntu-latest
+    # if: startsWith(github.ref, 'refs/tags/v')
     # needs:
     #   - build-publish
     steps:
+      - name: Checkout k8s repo
+        uses: actions/checkout@v2
+        with:
+          token: ${{ secrets.GH_TOKEN }}
+          repository: ${{ secrets.DEVOPS_K8S_REPO }}
+
+      - name: Update Explorer versions
+        run: 'sed -i "s@image: blockstack/explorer:.*@image: blockstack/explorer:$(echo ${GITHUB_REF#refs/*/v} | tr / -)@g" sites/explorer/staging/deployment.yaml'
+
+      - name: Commit version update
+        uses: stefanzweifel/git-auto-commit-action@v4
+        with:
+          commit_message: 'auto: update explorer version'
+          branch: auto/explorer-update
+          file_pattern: sites/explorer/*/deployment.yaml
+          commit_user_name: ${{ secrets.DEVOPS_COMMIT_USER }}
+          commit_user_email: ${{ secrets.DEVOPS_COMMIT_EMAIL }}
+          commit_author: ${{ secrets.DEVOPS_COMMIT_USER }} <${{ secrets.DEVOPS_COMMIT_EMAIL }}>
+
       - name: ArgoCD - Install CLI
         uses: clowdhaus/argo-cd-action/@main
         env:
@@ -77,7 +97,9 @@ jobs:
         with:
           command: version
           options: --client
+
       - name: Argocd - Login
         run: argocd --insecure login ${{ secrets.ARGOCD_SERVER }} --username ${{ secrets.ARGOCD_USERNAME }} --password ${{ secrets.ARGOCD_PASSWORD }}
+
       - name: Argocd - Sync Explorer
         run: argocd app sync staging.explorer | grep -v "http"
