--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,7 +23,8 @@ jobs:
   build-publish:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - name: Checkout
+        uses: actions/checkout@v2
         with:
           token: ${{ secrets.GH_TOKEN || secrets.GITHUB_TOKEN }}
 
@@ -69,6 +70,8 @@ jobs:
     # needs:
     #   - build-publish
     steps:
+      - name: Checkout
+        uses: actions/checkout@v2
       - name: Deploy Explorer
         uses: ./.github/actions/deploy
         with:
